# WhiskerToolbox

./: .clang-tidy  .gitignore  .gitmodules  .repo-to-text-settings.yaml  AGENTS.md  CMakeLists.txt  CMakeLists.txt.user.a62414d  CMakePresets.json  CMakeUserPresets.json  DOXYGEN_INTEGRATION.md  Doxyfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  about.html  api_reference.html  baseline_test_failures.txt  build_docs.sh  code-checker.json  config_log.txt  covariate_widget.ui  datamanager_build_warnings.txt  doxybook_config.json  fix_sizeimpl.py  fix_sizeimpl2.py  getting-started.html  index.html  introduction.html  my_stylesheet.qss  vcpkg.json  whiskertoolbox.qrc
WhiskerToolbox/Janelia/: CMakeLists.txt  detector_bank.cpp  janelia.cpp  janelia.h
benchmark/: AnalogLoad.benchmark.cpp  AnalogTimeSeriesLoading.benchmark.cpp  CMakeLists.txt  MaskArea.benchmark.cpp  README.md  RasterPlotViews.benchmark.cpp
benchmark/fixtures/: BenchmarkFixtures.hpp
src/: CMakeLists.txt  covariate_widget.ui  detector_bank.cpp  janelia.cpp  libavinc.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  videodecoder.cpp  whiskertoolbox_pch.hpp  whiskertracker.cpp
src/Commands/: AddInterval.cpp  AddInterval.hpp  AdvanceFrame.cpp  AdvanceFrame.hpp  AdvanceFrame.test.cpp  CMakeLists.txt  ClearLineDataAtTime.test.cpp  CommandContext.hpp  CommandDescriptor.hpp  CommandFactory.test.cpp  CommandInfo.test.cpp  CommandRecorder.test.cpp  CommandResult.hpp  CommandUIHints.hpp  Commands.test.cpp  CopyByTimeRange.cpp  CopyByTimeRange.hpp  FlipEventAtTime.cpp  FlipEventAtTime.hpp  ForEachKey.cpp  ForEachKey.hpp  GetEntityIdsInRange.cpp  GetEntityIdsInRange.hpp  GetEntityIdsInRange.test.cpp  LoadData.cpp  LoadData.test.cpp  MoveByTimeRange.cpp  MoveByTimeRange.hpp  SaveData.test.cpp  SaveDataAnalog.test.cpp  SaveDataDigitalEvent.test.cpp  SaveDataDigitalInterval.test.cpp  SetEventAtTime.hpp  SetEventAtTime.test.cpp  SynthesizeData.cpp  SynthesizeData.hpp  SynthesizeData.test.cpp  UpsampleTimeFrame.cpp  UpsampleTimeFrame.hpp  UpsampleTimeFrame.test.cpp  (+5 more)
src/CoreGeometry/: CMakeLists.txt
src/CoreMath/: CMakeLists.txt  non_finite_rows.cpp  non_finite_rows.hpp  parametric_polynomial_utils.cpp  parametric_polynomial_utils.hpp  polynomial_fit.cpp  polynomial_fit.hpp
src/CorePlotting/: CMakeLists.txt  CODE_REVIEW_ROADMAP.md  DESIGN.md  ROADMAP.md
src/CoreUtilities/: CMakeLists.txt
src/DataManager/: CMakeLists.txt  ConcreteDataFactory.cpp  ConcreteDataFactory.hpp  DataManager.cpp  DataManager.h  DataManager.hpp  DataManagerFwd.hpp  DataManagerSnapshot.cpp  DataManagerSnapshot.hpp  DataManagerSnapshot.test.cpp  DataManagerTypes.cpp  DataManagerTypes.hpp  DataManagerTypesFwd.hpp  DataSeries.cpp  DataSeries.h  TimeFrame.cpp  TimeFrame.h
src/DataManagerPipelineRunner/: CMakeLists.txt  main.cpp
src/DataObjects/: CMakeLists.txt
src/DataSynthesizer/: CMakeLists.txt  GeneratorRegistry.cpp  GeneratorRegistry.hpp  GeneratorTypes.hpp  Registration.hpp  register_datasynthesizer_commands.cpp  register_datasynthesizer_commands.hpp
src/DeepLearning/: CMakeLists.txt  register_deeplearning_commands.cpp  register_deeplearning_commands.hpp  torch_helpers.hpp
src/Entity/: CMakeLists.txt  EntityGroupManager.cpp  EntityGroupManager.hpp  EntityGroupManager.test.cpp  EntityId.hpp  EntityRegistry.cpp  EntityRegistry.hpp  EntityRelationshipManager.cpp  EntityRelationshipManager.hpp  EntityRelationshipManager.test.cpp  EntityTypes.hpp  LINEAGE_REFACTORING_PLAN.md
src/FeatureExtraction/: CMakeLists.txt  FeatureExtractor.hpp  FeatureVector.hpp  IFeature.cpp  IFeature.hpp
src/GatherResult/: CMakeLists.txt  GatherPipelineExecutor.cpp  GatherPipelineExecutor.hpp  GatherResult.hpp  IntervalAdapters.hpp  ViewAdaptorTypes.hpp
src/IO/: CMakeLists.txt
src/ImageProcessing/: CMakeLists.txt
src/Label_Widget/: Label_Widget.cpp  label_maker.cpp
src/MLCore/: CMakeLists.txt
src/MediaProcessingPipeline/: CMakeLists.txt  ProcessingOptionsSchema.hpp  ProcessingStep.hpp  ProcessingStepRegistry.cpp  ProcessingStepRegistry.hpp
src/Media_Window/: CMakeLists.txt  Images_Window.cpp  Images_Window.h  Media_Window.cpp  Media_Window.h  Video_Window.cpp  Video_Window.h
src/Observer/: CMakeLists.txt  Observer_Data.cpp  Observer_Data.hpp  Observer_Data.test.cpp
src/ParameterSchema/: CMakeLists.txt  ParameterSchema.cpp  ParameterSchema.hpp  PathFieldKind.hpp
src/PlotDataExport/: CMakeLists.txt  HeatmapCSVExport.hpp  HistogramCSVExport.hpp  RasterCSVExport.hpp
src/PlottingOpenGL/: CMakeLists.txt  GLContext.cpp  GLContext.hpp  RenderingTimer.hpp  SceneRenderer.cpp  SceneRenderer.hpp
src/PlottingSVG/: CMakeLists.txt  SVGDocument.cpp  SVGDocument.hpp  SVGExport.cpp  SVGExport.hpp  SVGSceneRenderer.cpp  SVGSceneRenderer.hpp  SVGUtils.cpp  SVGUtils.hpp
src/PythonBindings/: CMakeLists.txt  README.md  digital_interval_series_bindings.cpp  interval_bindings.cpp  transform_bindings.cpp  whiskertoolbox_module.cpp
src/SpatialIndex/: CMakeLists.txt  KdTree.cpp  KdTree.hpp  KdTree.test.cpp  QuadTree.hpp  QuadTree.test.cpp  RTree.test.cpp
src/StateEstimation/: CMakeLists.txt  Common.hpp  DataAdapter.hpp  DataSource.hpp  IdentityConfidence.hpp  MaskDataAdapter.hpp  MaskParticleFilter.cpp  MaskParticleFilter.hpp  MinCostFlowSolver.cpp  MinCostFlowSolver.hpp  MinCostFlowTracker.cpp  MinCostFlowTracker.hpp  MinCostFlowTracker.test.cpp  OutlierDetection.hpp  StateEstimation.cpp  StateEstimation.hpp  StateEstimator.hpp  Tracker.cpp  Tracker.hpp
src/TimeController/: CMakeLists.txt  TimeController.cpp  TimeController.hpp
src/TimeFrame/: CMakeLists.txt  StrongKeyTypes.hpp  StrongTimeTypes.test.cpp  TimeFrame.cpp  TimeFrame.hpp  TimeFrameIndex.hpp  TimeFrameIndexReflector.hpp  TimeIndexStorage.cpp  TimeIndexStorage.hpp  interval_data.hpp
src/TransformTypes/: CMakeLists.txt
src/TransformsV2/: CMakeLists.txt  DESIGN.md  GATHER_PIPELINE_DESIGN.md  NEXT_STEPS.md  PIPELINE_VALUE_STORE.md  register_transformsv2_commands.cpp  register_transformsv2_commands.hpp
src/TriageSession/: CMakeLists.txt  (+3 more)
tests/: CMakeLists.txt  whiskertoolbox_test_pch.hpp
(+10679 files in other folders)
